x264: Use __declspec(dllimport) with MinGW too

x264.h says this isn't needed with MinGW, but it looks like it is.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=779249